--- a/dashboard.html
+++ b/dashboard.html
@@ -753,7 +753,7 @@
     <div class="referral-section">
         <h4>আপনার রেফারেল</h4>
         <div class="referral-input-group">
-            <input type="text" id="referralLinkInput" value="https://takagorbd.com/join?ref=REF123456" readonly>
+            <input type="text" id="referralLinkInput" value="https://taka-gor-bd.github.io/Home-/dashboard.html" readonly>
             <span class="copy-icon" onclick="copyReferralLink()"><i class="fas fa-copy"></i></span>
         </div>
         <div class="share-buttons">
