--- a/dashboard.html
+++ b/dashboard.html
@@ -800,7 +800,7 @@
 
     <div class="telegram-join">
         <p>আমাদের টেলিগ্রাম চ্যানেলে যুক্ত হন সকল আপডেট পেতে!</p>
-        <a href="https://t.me/yourtelegramchannel" target="_blank">টেলিগ্রামে জয়েন করুন</a>
+        <a href="https://t.me/Taka_GorBD" target="_blank">টেলিগ্রামে জয়েন করুন</a>
     </div>
 
     <div class="bottom-navigation">
@@ -1020,7 +1020,7 @@
 
                         // রেফারেল লিংক আপডেট (যদি থাকে)
                         if (referralLinkInputElement && userData.referralCode) {
-                            referralLinkInputElement.value = `https://takagorbd.com/join?ref=${userData.referralCode}`;
+                            referralLinkInputElement.value = `https://taka-gor-bd.github.io/Home-/join?ref=${userData.referralCode}`;
                         }
                         
                         // **** মূল লজিক: আইডি অ্যাক্টিভেশন এবং প্রিমিয়াম ট্রায়াল ****
